<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        android:padding="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/mainLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!-- Header Section -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_pricing_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/playfairdisplay_semibold"
                android:gravity="center"
                android:text="@string/pricing"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_pricing_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/playfairdisplay_semibold"
                android:gravity="center"
                android:text="@string/get_started_npick_your_plan_now"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_pricing_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/find_your_best_life_partner_with_us"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <!-- Silver Plan -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/silverLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_background"
                android:elevation="@dimen/_6sdp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/silverTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfairdisplay_semibold"
                    android:gravity="center"
                    android:text="@string/silver"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/silverSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/get_started_with_us"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

                <Button
                    android:id="@+id/silverBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:backgroundTint="@color/orange_2"
                    android:text="@string/get_started"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/silverPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/_2499"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <!-- Plan Details -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/silverPlanLL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/silverPlansDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/validity_3_months"
                        android:textColor="@color/green" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/silverPlansDetails2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/free_user_profile_can_view"
                        android:textColor="@color/green" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/silverPlansDetails3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/view_contact_details"
                        android:textColor="@color/green" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/silverPlansDetails4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/_25_profiles_visible"
                        android:textColor="@color/green" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Gold Plan -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/goldLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_background"
                android:elevation="@dimen/_6sdp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/goldTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfairdisplay_semibold"
                    android:gravity="center"
                    android:text="@string/gold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/goldSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/get_more_benefits"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

                <Button
                    android:id="@+id/goldBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:backgroundTint="@color/orange_2"
                    android:text="@string/get_started"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/goldPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/_4999"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <!-- Plan Details -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/goldPlanLL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/goldPlansDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/validity_6_months"
                        android:textColor="@color/green" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/goldPlansDetails1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/more_user_profiles_visible"
                        android:textColor="@color/green" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/goldPlansDetails2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/view_more_contact_details"
                        android:textColor="@color/green" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/goldPlansDetails3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/_50_profiles_visible"
                        android:textColor="@color/green" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Platinum Plan -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/platinumLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_background"
                android:elevation="@dimen/_6sdp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/platinumTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfairdisplay_semibold"
                    android:gravity="center"
                    android:text="@string/platinum"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/platinumSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/get_the_best_benefits"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

                <Button
                    android:id="@+id/platinumBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:backgroundTint="@color/orange_2"
                    android:text="@string/get_started"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/platinumPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/_9999"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <!-- Plan Details -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/platinumPlanLL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/platinumPlansDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/validity_1_year"
                        android:textColor="@color/green" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/platinumPlansDetails1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/all_user_profiles_visible"
                        android:textColor="@color/green" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/platinumPlansDetails2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/view_all_contact_details"
                        android:textColor="@color/green" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/platinumPlansDetails3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/unlimited_profiles_visible"
                        android:textColor="@color/green" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>